# learn-wgpu

./: Cargo.toml  README.md  build.rs  index.html
src/: camera.rs  lib.rs  main.rs  model.rs  resources.rs  texture.rs
src/shaders/: light.wgsl  render.wgsl
