[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
cfg-if = "1.0.0"
color-eyre = "0.6.2"
env_logger = "0.10.0"
eyre = "0.6.8"
image = { version = "0.24.5", default-features = false, features = [
    "png",
    "jpeg",
] }
instant = "0.1.12"
log = "0.4.17"
nalgebra = { version = "0.32.2", features = ["bytemuck"] }
nalgebra-glm = "0.18.0"
pollster = "0.3.0"
tobj = { version = "3.2.4", features = ["async"] }
wgpu = "0.15.1"
winit = "0.28.2"

[build-dependencies]
color-eyre = "0.6.2"
fs_extra = "1.3.0"
glob = "0.3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
wgpu = { version = "0.15", features = ["webgl"] }
console_log = "0.2.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }
reqwest = "0.11.14"
